[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 2

[profile.dev]
codegen-units = 1
opt-level = 2

[profile.bench]
codegen-units = 1
opt-level = 2

[profile.test]
codegen-units = 1
opt-level = 2

[package]
name = "sort_algo_cmp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
